[tool.poetry]
name = "fluxional"
version = "0.1.8"
description = ""
authors = ["fluxional"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10 < 4.0"
boto3 = "^1.29.6"
python-dotenv = "^1.0.0"
aws-cdk-lib = {version = "2.114.1", optional = true}
aws-cdk-aws-apigatewayv2-integrations-alpha = {version = "2.114.1a0", optional = true}
awscrt = {version = "^0.20.0", optional = true}
awsiotsdk = {version = "^1.20.0", optional = true}
docker = "6.1.3"
typer = ">=0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pytest = "^7.4.2"
ruff = "^0.1.1"
coverage = "^7.3.2"
mypy = "^1.6.1"
mkdocs-material = "^9.5.2"

[tool.coverage.run]
omit = ["./conftest.py", "./tests/*", "./container/*", "./venv/*"]

[tool.poetry.scripts]
fluxional = "fluxional.cli:run_command_line"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
# Used for development & Everything
all = ["aws-cdk-lib", "aws-cdk-aws-apigatewayv2-integrations-alpha", "awscrt", "awsiotsdk"]
# Used for development by the user for real-time development
dev = ["awscrt", "awsiotsdk"]
